--- a/style.css
+++ b/style.css
@@ -1,76 +1,83 @@
 body {
   margin: 0;
-
+  background-color: #FAFAD2;
 }
 
 .main_container{
   height: 300px;
   padding-left: 37%;
   font-family: Arial, Helvetica, sans-serif;
-  color: red;
   text-align: center;
 }
+
+.container {
+  background-image: linear-gradient(#DEB887, 	#5F9EA0);
+  border-radius: 20PX;
+}
+
+h2 {
+  color: 	#F5F5F5;
+  top: 20px;
+}
+
+.input{
+   margin: 4px;
+   height: 40px;
+   padding: 0 5px;
+   width: 85%;
+   border-radius: 20px;
+   background-color: #F5F5F5	;
+
+}
+
+#button{
+ margin-top: 10px;
+ color: grey;
+ border: none;
+ height: 40px;
+ width: 30%;
+ font-weight: bold;
+ background-color: #F5F5F5;
+ border-radius: 20px;
+
+
+}
+/* .user{
+   background-color: #F5DEB3	;
+   width: 18%;
+   height: 100px;
+   color: #eeeeee;
+   padding: 20px ;
+   margin: 2px;
+
+} */
+.user-container{
+ display: flex;
+ flex-direction: row;
+ flex-wrap: wrap;
+ justify-content: center;
+}
+
+/* .delete-button{
+   background-color: #d85a49;
+   border: none;
+   float: right;
+   margin-top: 5px;
+} */
+
 .user-profile{
-   background-color: purple;
+   background-image: linear-gradient(#DEB887, 	#5F9EA0);
    width: 18%;
    height: 100px;
    color: purple;
    padding: 20px ;
    margin: 2px;
-
-}
-
-
-.input{
-       margin: 4px;
-       height: 30px;
-       padding: 0 5px;
-       width: 100%;
-}
-#button{
-       margin-top: 15px;
-       border: none;
-       height: 40px;
-       width: 50%;
-       font-weight: bold;
-       background-color:#4cbe65;
-
-}
-.user{
-       background-color: #252525;
-       width: 18%;
-       height: 100px;
-       color: #eeeeee;
-       padding: 20px ;
-       margin: 2px;
-
-}
-.user-container{
-       display: flex;
-       flex-direction: row;
-       flex-wrap: wrap;
-       justify-content: center;
-
-
-}
-.delete-button{
-       background-color: #d85a49;
-       border: none;
-       float: right;
-       margin-top: 5px;
-}
-
-.input{
-       border: none;
-       background-color: lightgreen;
-       color: white;
-
 }
 
 .err{
-       text-align: center;
-       background-color:  rgb(168, 48, 48);
-       font-size: 35px;
-       font-weight: bold;
-       color: #eeeeee;
+   text-align: center;
+   background-color:  rgb(168, 48, 48);
+   font-size: 35px;
+   font-weight: bold;
+   color: #eeeeee;
 }
