--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
   height: 300px;
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
+  width: 80%;
+  margin: auto;
 }
 
 .container {
@@ -17,6 +19,7 @@ body {
 h2 {
   color: 	#F5F5F5;
   top: 20px;
+  margin: auto;
 }
 
 .input{
@@ -38,6 +41,7 @@ h2 {
  font-weight: bold;
  background-color: #F5F5F5;
  border-radius: 20px;
+ margin-bottom: 19px;
 
 
 }
