--- a/style.css
+++ b/style.css
@@ -42,18 +42,8 @@ h2 {
  background-color: #F5F5F5;
  border-radius: 20px;
  margin-bottom: 19px;
-
-
 }
-/* .user{
-   background-color: #F5DEB3	;
-   width: 18%;
-   height: 100px;
-   color: #eeeeee;
-   padding: 20px ;
-   margin: 2px;
 
-} */
 .user-container{
  display: flex;
  flex-direction: row;
@@ -61,12 +51,13 @@ h2 {
  justify-content: center;
 }
 
-/* .delete-button{
-   background-color: #d85a49;
+.delete-button{
+   background-color: lightgrey;
    border: none;
    float: right;
    margin-top: 5px;
-} */
+   border-radius: 10px;
+}
 
 .user-profile{
    background-image: linear-gradient(#DEB887, 	#5F9EA0);
@@ -77,10 +68,10 @@ h2 {
    margin: 2px;
 }
 
-.err{
+/* .err{
    text-align: center;
    background-color:  rgb(168, 48, 48);
    font-size: 35px;
    font-weight: bold;
    color: #eeeeee;
-}
+} */
